[package]
name = "clixy"
description = "A CLI tool."
version = "0.8.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Nanagalaxy/Clixy"
authors = ["Naexy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
fs4 = "0.11.0"
indicatif = "0.17.8"
rand = "0.8.5"
rayon = "1.10.0"
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.13.0"

[[bin]]
name = "clixy"
path = "src/main.rs"

[features]
default = ["describe"]
describe = []
file = []
random = []
