[package]
name = "clixy"
description = "A CLI tool."
version = "0.9.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Nanagalaxy/Clixy"
authors = ["Naexy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
fs4 = "0.12.0"
hex = "0.4.3"
indicatif = "0.17.9"
md-5 = "0.10.6"
rand = "0.8.5"
rayon = "1.10.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

[dev-dependencies]
tempfile = "3.15.0"

[[bin]]
name = "clixy"
path = "src/main.rs"

[features]
default = ["describe"]
describe = []
file = []
random = []
