[package]
name = "clixy"
description = "A CLI tool."
version = "0.11.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Nanagalaxy/Clixy"
authors = ["Naexy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["cargo", "derive"] }
deunicode = "1.6.0"
digest = "0.10.7"
fs4 = "0.13.0"
hex = "0.4.3"
indicatif = "0.17.11"
md-5 = "0.10.6"
rand = "0.9.0"
rayon = "1.10.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.17.1"

[[bin]]
name = "clixy"
path = "src/main.rs"

[features]
default = ["describe"]
describe = []
crypto = []
file = []
random = []
